# zen-translator

./: .gitignore  LLM.md  MODEL_CARD.md  Makefile  NOTICE  README.md  pyproject.toml
configs/: train_anchor.yaml  train_identity.yaml
scripts/: download_models.py
src/zen_translator/: __init__.py  cli.py  config.py  pipeline.py  server.py
src/zen_translator/lip_sync/: __init__.py  musetalk.py  wav2lip.py  wav2lip_model.py
src/zen_translator/streaming/: __init__.py  server.py
src/zen_translator/training/: __init__.py  news_anchor_dataset.py  swift_config.py
src/zen_translator/translation/: __init__.py  qwen3_omni.py
src/zen_translator/ui/: __init__.py  app.py
src/zen_translator/voice_clone/: __init__.py  cosyvoice.py
tests/: __init__.py  conftest.py  test_config.py  test_pipeline.py  test_training.py  test_wav2lip_model.py
